--- a/ResponsiveNav/03/after/app.css
+++ b/ResponsiveNav/03/after/app.css
@@ -2,6 +2,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+.navbar {
+    margin-bottom: 0px;
+}
+
 header, footer {
     background-color: #333;
     color: #ddd;
